--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </article>
   </section>
   <audio controls loop>
-    <source src="C:\Users\mukul\Downloads\Music\Stranger Things.mp3" type="audio/mp3">
+    <source src="Stranger Things.mp3" type="audio/mp3">
   </audio>
   <video controls >
 <source src=""C:\Users\mukul\Videos\Captures\Modern Warfare 2 2025-11-02 20-19-08.mp4" type="video">
@@ -104,4 +104,5 @@
     <p>all rights reserved </p> 
     </footer>
   </body>
+
 </html>
