--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <source src="Stranger Things.mp3" type="audio/mp3">
   </audio>
   <video controls >
-<source src=""C:\Users\mukul\Videos\Captures\Modern Warfare 2 2025-11-02 20-19-08.mp4" type="video">
+<source src="7821640-hd_1920_1080_30fps.mp4" type="video">
 </video>
 <br><br>
 
@@ -106,3 +106,4 @@
   </body>
 
 </html>
+
