--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <audio controls loop>
     <source src="Stranger Things.mp3" type="audio/mp3">
   </audio>
-  <video controls >
+  <video controls width="500" >
 <source src="7821640-hd_1920_1080_30fps.mp4" type="video">
 </video>
 <br><br>
@@ -106,4 +106,5 @@
   </body>
 
 </html>
+
 
