--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>L-O-A-D--L-I-N-K</title>
 </head>
-<body>
+<body style="background-color:orange;">
   <header><h1>"load jaha truck waha "</h1><nav>
     <a href="#">home</a>
     <a href="#">about</a>
@@ -106,6 +106,7 @@
   </body>
 
 </html>
+
 
 
 
