--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <a href="#">about</a>
     <a href="#">plans</a>
     <a href="#">connect with us </a>
-  </nav></header>
+  </nav><style>nav a {color:"black;padding:30px;margin:10px 15px 20px; </style>
+  </header>
   <br>
   <br><br>
   <section><h1>what we are ?</h1>
@@ -106,6 +107,7 @@
   </body>
 
 </html>
+
 
 
 
