--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <title>L-O-A-D--L-I-N-K</title>
 </head>
 <body style="background-color:orange;">
-  <header><h1>"load jaha truck waha "</h1><nav>
+  <header><h1>"load jaha truck waha "</h1><nav style= color:"black;padding:30px;margin:10px 15px 20px; >
     <a href="#">home</a>
     <a href="#">about</a>
     <a href="#">plans</a>
     <a href="#">connect with us </a>
-  </nav><style>nav a {color:"black;padding:30px;margin:10px 15px 20px; </style>
+  </nav>
   </header>
   <br>
   <br><br>
@@ -107,6 +107,7 @@
   </body>
 
 </html>
+
 
 
 
