--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>L-O-A-D--L-I-N-K</title>
 </head>
 <body style="background-color:orange;">
-  <header><h1>"load jaha truck waha "</h1><nav style= color:"black;padding:30px;margin:10px 15px 20px; >
+  <header><h1>"load jaha truck waha "</h1><nav style= color:"black";padding:30px;margin:10px 15px 20px; >
     <a href="#">home</a>
     <a href="#">about</a>
     <a href="#">plans</a>
@@ -107,6 +107,7 @@
   </body>
 
 </html>
+
 
 
 
