--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <title>L-O-A-D--L-I-N-K</title>
 </head>
 <body style="background-color:orange;">
-  <header><h1>"load jaha truck waha "</h1><nav style= padding:20px;margin:20px 22px 15px;>
-    <a href="#" style=color:"black" >home</a>
-    <a href="#" style=color:"orange">about</a>
-    <a href="#"style=color:"red">plans</a>
-    <a href="#"style=color:"purple">connect with us </a>
+  <header><h1>"load jaha truck waha "</h1><nav style="padding:20px;margin:10px 20px 15px;">
+    <a href="#" style="color:black;" >home</a>
+    <a href="#" style="color:orange;">about</a>
+    <a href="#"style="color:red;">plans</a>
+    <a href="#"style="color:purple;">connect with us </a>
   </nav>
   </header>
   <br>
@@ -107,6 +107,7 @@
   </body>
 
 </html>
+
 
 
 
